meet the team bottom whitespace issue

--- a/components/TeamMembers.module.css
+++ b/components/TeamMembers.module.css
@@ -2,7 +2,7 @@
     --gap: 1.5rem;
     --padding: 38px;
     gap: var(--gap);
-    margin: 85px 0 55px;
+    margin: 5rem 0;
     display: grid;
     grid-template-columns: repeat(3, minMax(0, 1fr));
   }
